Warnings por deprecated eliminados