@@ -103,7 +103,7 @@ public class StrategyCrearAgregadosMesesColab extends DefaultStrategyRequest {
 					fechaAux.set(Calendar.DAY_OF_MONTH, 1);
 					
 					FieldViewSet fsetmes = new FieldViewSet(mesEntidad);
-					fsetmes.setValue(mesEntidad.searchField(ConstantesModelo.MES_1_ID).getName(), new Long(mes));
+					fsetmes.setValue(mesEntidad.searchField(ConstantesModelo.MES_1_ID).getName(), Long.valueOf(mes));
 					String mesDeDoce = (String) dataAccess.searchEntityByPk(fsetmes).getValue(mesEntidad.searchField(ConstantesModelo.MES_2_NOMBRE).getName());
 					
 					FieldViewSet registroMesColaborador = null;
