@@ -15,63 +15,63 @@ public final class CodigosISOProvinciasSpain {
 
 	public static final Map<Integer, String> provinciasCodes = new HashMap<Integer, String>();
 	static {
-		provinciasCodes.put(new Integer("1"), "es-vi");
-		provinciasCodes.put(new Integer("2"), "es-ab");
-		provinciasCodes.put(new Integer("3"), "es-a");
-		provinciasCodes.put(new Integer("4"), "es-al");
-		provinciasCodes.put(new Integer("5"), "es-av");
-		provinciasCodes.put(new Integer("6"), "es-ba");
-		provinciasCodes.put(new Integer("7"), "es-pm");
-		provinciasCodes.put(new Integer("8"), "es-b");
-		provinciasCodes.put(new Integer("9"), "es-bu");
-		provinciasCodes.put(new Integer("10"), "es-cc");
+		provinciasCodes.put(Integer.valueOf(1), "es-vi");
+		provinciasCodes.put(Integer.valueOf(2), "es-ab");
+		provinciasCodes.put(Integer.valueOf(3), "es-a");
+		provinciasCodes.put(Integer.valueOf(4), "es-al");
+		provinciasCodes.put(Integer.valueOf(5), "es-av");
+		provinciasCodes.put(Integer.valueOf(6), "es-ba");
+		provinciasCodes.put(Integer.valueOf(7), "es-pm");
+		provinciasCodes.put(Integer.valueOf(8), "es-b");
+		provinciasCodes.put(Integer.valueOf(9), "es-bu");
+		provinciasCodes.put(Integer.valueOf(10), "es-cc");
 
-		provinciasCodes.put(new Integer("11"), "es-ca");
-		provinciasCodes.put(new Integer("12"), "es-cs");
-		provinciasCodes.put(new Integer("13"), "es-cr");
-		provinciasCodes.put(new Integer("14"), "es-co");
-		provinciasCodes.put(new Integer("15"), "es-c");
-		provinciasCodes.put(new Integer("16"), "es-cu");
-		provinciasCodes.put(new Integer("17"), "es-gi");
-		provinciasCodes.put(new Integer("18"), "es-gr");
-		provinciasCodes.put(new Integer("19"), "es-gu");
-		provinciasCodes.put(new Integer("20"), "es-ss");
+		provinciasCodes.put(Integer.valueOf(11), "es-ca");
+		provinciasCodes.put(Integer.valueOf(12), "es-cs");
+		provinciasCodes.put(Integer.valueOf(13), "es-cr");
+		provinciasCodes.put(Integer.valueOf(14), "es-co");
+		provinciasCodes.put(Integer.valueOf(15), "es-c");
+		provinciasCodes.put(Integer.valueOf(16), "es-cu");
+		provinciasCodes.put(Integer.valueOf(17), "es-gi");
+		provinciasCodes.put(Integer.valueOf(18), "es-gr");
+		provinciasCodes.put(Integer.valueOf(19), "es-gu");
+		provinciasCodes.put(Integer.valueOf(20), "es-ss");
 
-		provinciasCodes.put(new Integer("21"), "es-h");
-		provinciasCodes.put(new Integer("22"), "es-hu");
-		provinciasCodes.put(new Integer("23"), "es-j");
-		provinciasCodes.put(new Integer("24"), "es-le");
-		provinciasCodes.put(new Integer("25"), "es-l");
-		provinciasCodes.put(new Integer("26"), "es-lo");
-		provinciasCodes.put(new Integer("27"), "es-lu");
-		provinciasCodes.put(new Integer("28"), "es-m");
-		provinciasCodes.put(new Integer("29"), "es-ma");
-		provinciasCodes.put(new Integer("30"), "es-mu");
+		provinciasCodes.put(Integer.valueOf(21), "es-h");
+		provinciasCodes.put(Integer.valueOf(22), "es-hu");
+		provinciasCodes.put(Integer.valueOf(23), "es-j");
+		provinciasCodes.put(Integer.valueOf(24), "es-le");
+		provinciasCodes.put(Integer.valueOf(25), "es-l");
+		provinciasCodes.put(Integer.valueOf(26), "es-lo");
+		provinciasCodes.put(Integer.valueOf(27), "es-lu");
+		provinciasCodes.put(Integer.valueOf(28), "es-m");
+		provinciasCodes.put(Integer.valueOf(29), "es-ma");
+		provinciasCodes.put(Integer.valueOf(30), "es-mu");
 
-		provinciasCodes.put(new Integer("31"), "es-na");
-		provinciasCodes.put(new Integer("32"), "es-or");
-		provinciasCodes.put(new Integer("33"), "es-o");
-		provinciasCodes.put(new Integer("34"), "es-p");
-		provinciasCodes.put(new Integer("35"), "es-gc");
-		provinciasCodes.put(new Integer("36"), "es-po");
-		provinciasCodes.put(new Integer("37"), "es-sa");
-		provinciasCodes.put(new Integer("38"), "es-tf");
-		provinciasCodes.put(new Integer("39"), "es-s");
-		provinciasCodes.put(new Integer("40"), "es-sg");
+		provinciasCodes.put(Integer.valueOf(31), "es-na");
+		provinciasCodes.put(Integer.valueOf(32), "es-or");
+		provinciasCodes.put(Integer.valueOf(33), "es-o");
+		provinciasCodes.put(Integer.valueOf(34), "es-p");
+		provinciasCodes.put(Integer.valueOf(35), "es-gc");
+		provinciasCodes.put(Integer.valueOf(36), "es-po");
+		provinciasCodes.put(Integer.valueOf(37), "es-sa");
+		provinciasCodes.put(Integer.valueOf(38), "es-tf");
+		provinciasCodes.put(Integer.valueOf(39), "es-s");
+		provinciasCodes.put(Integer.valueOf(40), "es-sg");
 
-		provinciasCodes.put(new Integer("41"), "es-se");
-		provinciasCodes.put(new Integer("42"), "es-so");
-		provinciasCodes.put(new Integer("43"), "es-t");
-		provinciasCodes.put(new Integer("44"), "es-te");
-		provinciasCodes.put(new Integer("45"), "es-to");
-		provinciasCodes.put(new Integer("46"), "es-v");
-		provinciasCodes.put(new Integer("47"), "es-va");
-		provinciasCodes.put(new Integer("48"), "es-bi");
-		provinciasCodes.put(new Integer("49"), "es-za");
-		provinciasCodes.put(new Integer("50"), "es-z");
+		provinciasCodes.put(Integer.valueOf(41), "es-se");
+		provinciasCodes.put(Integer.valueOf(42), "es-so");
+		provinciasCodes.put(Integer.valueOf(43), "es-t");
+		provinciasCodes.put(Integer.valueOf(44), "es-te");
+		provinciasCodes.put(Integer.valueOf(45), "es-to");
+		provinciasCodes.put(Integer.valueOf(46), "es-v");
+		provinciasCodes.put(Integer.valueOf(47), "es-va");
+		provinciasCodes.put(Integer.valueOf(48), "es-bi");
+		provinciasCodes.put(Integer.valueOf(49), "es-za");
+		provinciasCodes.put(Integer.valueOf(50), "es-z");
 
-		provinciasCodes.put(new Integer("51"), "es-ce");
-		provinciasCodes.put(new Integer("52"), "es-me");
+		provinciasCodes.put(Integer.valueOf(51), "es-ce");
+		provinciasCodes.put(Integer.valueOf(52), "es-me");
 
 	}
 
