@@ -422,7 +422,7 @@ public class DataAccess implements IDataAccess {
 					order != null ? 1 : -1, orderFields, order, this.conn);
 			int contador = 1;
 			for (FieldViewSetCollection resultColec : results) {
-				firstAndLast.put(new Integer(contador++), resultColec.getFieldViewSets().iterator().next());
+				firstAndLast.put(Integer.valueOf(contador++), resultColec.getFieldViewSets().iterator().next());
 			}
 			return firstAndLast;
 		}
